Added Visual Loading to Printer Menu, Removed Powershell window from appearing

--- a/CSS Styles/styles.css
+++ b/CSS Styles/styles.css
@@ -138,8 +138,10 @@ button {
 	cursor: pointer; /* Change cursor to pointer */
 }
 
+/*
 #settingsContainer {
 }
+*/
 
 #settingsImage {
 	width: 80px; /* Adjust the size as needed */
